# bibliometria

./: .gitignore  README.md  bibliometria_demo.ipynb  pyproject.toml
docs/: bibliometria.html
preprocessing/: clean_data.ipynb  parser.ipynb
src/: __init__.py  journal_data.py  metrics.py  metrics_utils.py
src/bibliometria/: __init__.py  metrics.py
src/bibliometria/data/: __init__.py
